syntax = "proto3";

package hatchet;

import "crossplane/deployment.proto";
import "crossplane/types.proto";
import "database/database.proto";
import "stroppy/test.proto";
import "validate/validate.proto";

option go_package = "github.com/stroppy-io/hatchet-workflow/internal/proto/hatchet";

message HatchetServer {
    string url = 1 [(validate.rules).string.min_len = 1];
    string token = 2 [(validate.rules).string.min_len = 1];
}

message Tasks {
    message Provision {
        message Input {
            string run_id = 1 [(validate.rules).string.min_len = 1];
            repeated string hatchet_workers_names = 2 [(validate.rules).repeated.min_items = 1];
            crossplane.DeploymentSet.Request request = 3 [(validate.rules).message.required = true];
        }
        message Output {
            crossplane.DeploymentSet deployment_set = 1;
        }
    }

    /*
        Run stroppy test using test suite
    */
    message StroppyTest {
        message Input {
            string run_id = 1 [(validate.rules).string.min_len = 1];
            HatchetServer hatchet_server = 2 [(validate.rules).message.required = true];
            crossplane.SupportedCloud supported_cloud = 3 [(validate.rules).enum.defined_only = true];
            stroppy.Test test = 4 [(validate.rules).message.required = true];
        }
        message Output {
            stroppy.TestResult result = 1 [(validate.rules).message.required = true];
        }
    }

    /*
        Run stroppy test
        This step can request database setup if one of test.database_ref is Database
    */
    message StroppyTestSuite {
        message Input {
            HatchetServer hatchet_server = 1 [(validate.rules).message.required = true];
            crossplane.SupportedCloud supported_cloud = 3 [(validate.rules).enum.defined_only = true];
            stroppy.TestSuite suite = 4 [(validate.rules).message.required = true];
        }
        message Output {
            stroppy.TestSuiteResult results = 1 [(validate.rules).message.required = true];
        }
    }
}

